# FileTransfer

./: .clang-format  .gitignore  CMakeLists.txt  README.md  globalDefine.h  main.cpp
3rd/asio/detail/: winapp_thread.hpp  wince_thread.hpp
ClientCore/: CMakeLists.txt  ClientCore.cxx  ClientCore.h
ClientInterface/: ClientInterface.hpp
Console/: CMakeLists.txt  Console.cxx  Console.h  main.cxx
Gui/: CMakeLists.txt  FileTransferGUI.cpp  FileTransferGUI.h  FileTransferGUI.ui  main.cpp
Gui/Control/: CompareControl.cpp  ConnectControl.cpp  ConnectControl.h  ConnectControl.ui  FileControl.cpp  FileControl.h  FileControl.ui  LogControl.cpp  LogControl.h  LogControl.ui
Gui/GUIUtil/: GUIInterface.cpp  GUIInterface.h  Public.cpp  Public.h
Gui/Res/: QtTheme.qrc
Information/: InfoClient.hpp  InfoCommunicate.hpp  InfoDirFile.hpp  InfoEnhance.hpp
Protocol/: CMakeLists.txt  Protocol.cxx  Protocol.h
Server/: CMakeLists.txt  Server.cxx  Server.h  SimpleLog.hpp  main.cxx
Util/: CMakeLists.txt  LocalFile.cxx  LocalFile.h  Util.cxx  Util.h
test/: CMakeLists.txt
test/3rdlib/: CMakeLists.txt  asio_test.hpp  cereal_test.hpp  main.cxx
